<resources>
    <string name="app_name">CineBedu</string>
    <string name="cinema_listings">Cartelera</string>
    <string name="favorite_movies">Favoritas</string>
    <string name="see_later">Ver mas tarde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_background">img_background</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to">Bienvenido a</string>
    <string name="movies_app">Movies App</string>
    <string name="sign_up_string">Sign Up.</string>

    <!--Navigation Dreawer-->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="movie_image_description">movie image</string>
    <string name="starstext">StarsText</string>


    <!--Favorites text-->
    <string name="your_favorites_movies">Estas son tus películas favoritas</string>
    <string name="dont_have_your_favorites_movies">No cuentas con películas favortitas por el momento</string>

    <!--Next To See-->
    <string name="your_next_movies">Estas son tus películas para ver mas tarde</string>
    <string name="dont_have_your_next_movies">No cuentas con películas para ver mas tarde por el momento</string>


    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="actors_string">ACTORES</string>
    <string name="director_string">Director</string>
    <string name="string_next_to_see">Estas son tus películas para ver más tarde</string>

</resources>