<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />

    <item
        android:id="@+id/bottom_fav"
        android:title="@string/cinema_listings"
        android:icon="@drawable/baseline_heart_broken_24"
        />

    <item

        android:title=""
        android:enabled="true"
        />

    <item
        android:id="@+id/subscription"
        android:title="@string/favorite_movies"
        android:icon="@drawable/baseline_stars_24"
        />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        />
</menu>