<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_to"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movies_app"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign_up_string"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_email"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/lavender_border"
                android:padding="14dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/lavender_border"
                android:padding="14dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_confirm"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/lavender_border"
                android:padding="14dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                android:text="@string/sign_up"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                app:cornerRadius = "30dp"
                android:backgroundTint="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/black"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>