<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fondodetalleappcolores"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="543dp"
                android:contentDescription="@string/movie_image_description"
                android:scaleType="centerCrop" />


            <TextView
                android:id="@+id/movie_title"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/fondotitulorojo"
                android:text="TITLE"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:background="@drawable/fondoopcionesrojo">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="☆"
                        android:textAlignment="textEnd"
                        android:textColor="@color/yellow"
                        android:textSize="32dp" />

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="103dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/starstext"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/movie_date"
                        android:layout_width="119dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="Date"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/original_language"
                        android:layout_width="77dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="Lenguaje"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/movie_popularity"
                        android:layout_width="121dp"
                        android:layout_height="58dp"
                        android:padding="8dp"
                        android:text="Popularity"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                </LinearLayout>
            </HorizontalScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_resume"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:scrollbars="vertical"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:text="@string/director_string"
                android:textColor="@color/black"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/director_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/img_background"
                android:src="@drawable/call_of_duty"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/director_name"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:text="DIRECTOR"
                android:textAlignment="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:text="@string/actors_string"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCinemaListing"
                layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                listitem="@layout/movies_catalog"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/similar_movies"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:textSize="24sp"
            android:text="SIMILARES"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSimilarMovies"
            listitem="@layout/movies_catalog"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>



</ScrollView>